--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typeorm-crud",
+  "name": "@atlasjs/typeorm-crud",
   "version": "1.0.0",
   "description": "Libreria para nestjs que facilita el crud con typeorm",
   "main": "dist/index.js",
@@ -16,13 +16,21 @@
     "release": "release-it"
   },
   "devDependencies": {
+    "@types/pluralize": "^0.0.29",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.10.0 || ^7.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.6",
+    "@nestjs/core": "^8.0.2",
+    "@nestjs/swagger": "^5.0.1",
     "@nestjs/typeorm": "^8.0.1",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.32"
+  },
+  "dependencies": {
+    "joi": "^17.4.1",
+    "joi-to-swagger": "^5.2.0",
+    "pluralize": "^8.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.6.6"
   }
 }
