--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atlasjs/typeorm-crud",
-  "version": "1.0.6",
+  "version": "1.0.16",
   "description": "Libreria para nestjs que facilita el crud con typeorm",
   "main": "dist/index.js",
   "repository": "http://git.geocuba.cu/atlasjs/nestjs/lib/typeorm/typeorm-crud.git",
@@ -19,16 +19,18 @@
     "@types/pluralize": "^0.0.29",
     "typescript": "^4.3.5"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "@nestjs/common": "^7.6.13",
+    "@nestjs/core": "^7.6.13",
+    "@nestjs/swagger": "^4.8.0",
+    "@nestjs/typeorm": "^7.1.5",
     "joi": "^17.4.0",
-    "joi-to-swagger": "^5.2.0",
-    "pluralize": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
-    "@nestjs/common": "^6.10.0 || ^7.0.0",
-    "@nestjs/core": "^8.0.2",
-    "@nestjs/swagger": "^5.0.1",
-    "@nestjs/typeorm": "^8.0.1",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.31",
+    "joi-to-swagger": "^5.2.0"
+  },
+  "dependencies": {
+    "pluralize": "^8.0.0"
   }
 }
